<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBottomNavigation"
    android:orientation="horizontal"
    android:id="@+id/fragment_playlist_library_layout1"
    tools:context=".Fragments.LIBRARY_FRAGMENT.Playlist_library_fragment.Playlist_library">
    <ScrollView
        android:id="@+id/fragment_playlist_library_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:id="@+id/fragment_playlist_library_layout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/library_create_playliste_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/library_playlist_image"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/add"
                android:padding="16dp"
                android:background="@color/color1"
                android:layout_gravity="center_vertical" />
            <LinearLayout
                android:id="@+id/fragment_playlist_library_layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="32dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/library_playlist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="Create playlist"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/fragment_playlist_library_layout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/library_playlist_recycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ProgressBar
                android:id="@+id/library_playlist_progress_bar"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/something_wrong_layout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:visibility="gone">
                <TextView
                    android:id="@+id/something_wrong_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/background_light"
                    android:text="something went wrong"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/try_again3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_rounded_button"
                    android:text="Try Again"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textSize="14dp"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/background_light"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>

</FrameLayout>