<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutcolor"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

       <FrameLayout
           android:id="@+id/frame_fragment"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           />
    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/bottom_sheet_frame_layout"
        android:layout_height="68dp">
        <fragment
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_alignParentBottom="true"
            android:name="com.example.spotify.media.BottomSheetFragment"
            android:id="@+id/bottom_fragment"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:background="@color/bgBottomNavigation">

        <com.google.android.material.bottomnavigation.BottomNavigationView

            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:itemBackground="@color/bgBottomNavigation"
            app:itemIconTint="@android:color/white"
            app:itemTextColor="@android:color/white"
            app:menu="@menu/bottomnav"

            >

        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </FrameLayout>

</LinearLayout>