...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textSize="18dp" />
        </LinearLayout>
        <ImageView
            android:id="@+id/settings_library"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:src="@drawable/more_options" />
...
