<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/playlist_library_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/playlist_setting_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/media_player_background_color"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/activity_playlist_library_settings_layout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0.09">

            <ImageView
                android:id="@+id/settings_playlist_library_arrow"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:src="@drawable/down_arrow" />

            <TextView
                android:id="@+id/playlist_name_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/playlist_header"
                android:textColor="@android:color/background_light" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_playlist_library_settings_layout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35">

            <ImageView
                android:id="@+id/setting_playlist_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/activity_playlist_library_settings_layout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/settings_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/delete_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/delete_playlist" />

                <TextView
                    android:id="@+id/activity_playlist_library_settings_text1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:text="Delete Playlist"
                    android:textColor="@android:color/background_light"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings_upload_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/add_photo" />

                <TextView
                    android:id="@+id/activity_playlist_library_settings_text2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:text="Upload Image"
                    android:textColor="@android:color/background_light"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/settings_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/rename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_edit_black_24dp" />

                <TextView
                    android:id="@+id/activity_playlist_library_settings_text3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:text="Edit Playlist Name"
                    android:textColor="@android:color/background_light"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>