...
            android:textStyle="bold" />

        <EditText
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:id="@+id/playlist_name_edit_text"
            android:gravity="center"
            android:hint="Playlist Name"
            android:textColor="@color/cardview_light_background"
            android:inputType="text" />
        <LinearLayout
            android:id="@+id/activity_create_playlist_layout3"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/cancel_create_playlist"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:text="CANCEL"
                android:textColor="@android:color/darker_gray"/>
            <Button
...
